# mimic

./: .gitignore  README.md  __main__.py  layers.py  lstm.py  models.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  utils.py
layers/: dense.py  layer.py
micro/: __main__.py
mimicnet/: mimic.py  net.py
models/: sequential.py
simple/: __main__.py
src/markgent/: __main__.py
src/markgent/base/: agent.py  trainer.py
src/markgent/grid/: __init__.py  agent.py  env.py  trainer.py
src/micro/: __main__.py  dataset.py  fns.py  trainer.py
src/micro/models/: basic.py
src/mimic/: __init__.py  __main__.py  data_utils.py  dataset.py  fns.py  net.py  net_utils.py  runner.py  trainer.py
src/mimic/app/: __main__.py  netviewer.py  scene.py
src/mimic/enviro/: __init__.py  runner.py  trainer.py
src/mimic/layers/: dense.py  layer.py
src/mimic/models/: __init__.py  base.py  basic.py  model.py  sequential.py
src/mimic/optimizers/: simpleton.py
src/mimic/utils/: data.py  dataset.py  net.py  vis.py  weights.py
src/mimic/utils/fns/: __init__.py  activation.py  base.py  error.py
tests/: basic_model.py  test_sequential.py
