[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mimic"
version = "0.1.0"
description = "naive neural net impls in python"
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
networkx = "^3.0"
tk = "^0.1.0"
compushady = "^0.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
mimic = "mimic.__main__:main"
mimic-gpu = "mimic.gpu.__main__:main"
